k8s/apps/bentopdf/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bentopdf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app.kubernetes.io/name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:2.8.7@sha256:165113f4579cc61ea353ad0597ed510cc2101ef879ec5e91875a3df0c0b219a0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: bentopdf
  ports:
    - port: 80
      targetPort: 8080
      name: http
