k8s/apps/bentopdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf
  namespace: bentopdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "BentoPDF"
    gethomepage.dev/description: "PDF tools"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-bentopdf.png"
    gethomepage.dev/href: "https://bentopdf.item.fyi"
    gethomepage.dev/siteMonitor: "http://bentopdf.bentopdf.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=bentopdf"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bentopdf.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
